--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-  <h1> Hello, Code School!</h1>
-    <ul>
-      <li>HTML</li>
-      <li>JavaScript</li>
-      <li>CSS</li>
-      <li>Ruby</li>
-    </ul>
+      <h1> Hello, Code School!.</h1>
+         <ul>
+           <li>HTML</li>
+           <li>JavaScript</li>
+           <li>CSS</li>
+           <li>Ruby</li>
+        </ul>
   </body>
 </html>
